back/k8s/base/deployment.yaml
# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
  labels:
    app: canine-app
spec:
  selector:
    matchLabels:
      app: canine-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      name: app
      labels:
        app: canine-app
    spec:
      serviceAccountName: NAME_PLACEHOLDER
      containers:
      - name: app
        image: app
        resources:
          limits:
            memory: "200Mi"
            cpu: "20m"
        readinessProbe:
          initialDelaySeconds: 1
          periodSeconds: 1
          httpGet:
            path: /healthz
            port: 8080
        ports:
        - name: http
          containerPort: 8080
