back/k8s/base/app-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: canine-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
