back/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: app
            port:
              number: 80
#  defaultBackend:
#    service:
#      name: web-site
#      port:
#        number: 80
